--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,12 +8,12 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/Theme.SearchRecipeApp"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name="com.hilt.compnaviagte.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.SearchRecipeApp">
