--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.SearchRecipeApp"
         tools:targetApi="31">
         <activity
-            android:name="com.hilt.compnaviagte.MainActivity"
+            android:name="com.hilt.compnavigate.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.SearchRecipeApp">
