--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.4.0"
+agp = "8.11.1"
 kotlin = "1.9.22"
 coreKtx = "1.13.1"
 junit = "4.13.2"
@@ -11,6 +11,7 @@ composeBom = "2024.05.00"
 appcompat = "1.6.1"
 material = "1.12.0"
 engageCore = "1.5.0"
+roomCommonJvm = "2.7.2"
 
 
 
@@ -87,6 +88,7 @@ media-three-common = { module = "androidx.media3:media3-common", version = "1.3.
 
 #youtube video player
 youtube-video-player={module ="com.pierfrancescosoffritti.androidyoutubeplayer:chromecast-sender",version="0.28"}
+androidx-room-common-jvm = { group = "androidx.room", name = "room-common-jvm", version.ref = "roomCommonJvm" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
